2005-06-17 Mikhail Khodjaiants
	Bug 100261: Memory veiw: Renderings content disappears when click on Vairable/Module... view.
	* CDebugElement.java

2005-06-16 Mikhail Khodjaiants
	Bug 100471: Signed/Unsigned Integer renderings show '?' for valid memory blocks.
	* CMemoryBlockExtension.java

2005-06-16 Mikhail Khodjaiants
	Bug 100445: The endianess of a debug target is reversed.
	* CMemoryBlockExtension.java

2005-06-16 Mikhail Khodjaiants
	Partial fix for bug 79371: Setting breakpoints in the left hand side ruler of the disassembly view is sluggish.
	* CBreakpointManager.java

2005-06-14 Mikhail Khodjaiants
	Bug 98814: NullPointerException and failed to launch debug session for a project.
	* CDebugTarget.java

2005-06-13 Mikhail Khodjaiants
	Temporary fix for bug 77279: The memory view address should not be cleared on project restart.
	* ICDTLaunchConfigurationConstants.java
	* CMemoryBlockRetrievalExtension.java
	* InternalDebugCoreMessages.properties
	* CDebugTarget.java

2005-06-12 Mikhail Khodjaiants
	Temporary fix for bug 79872: Make instruction stepping default in disassembly view.
	* ICDebugConstants.java
	* CDebugCorePreferenceInitializer.java
	* CDebugTarget.java

2005-06-09 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Don't save the list of registers for default groups.
	* CRegisterManager.java

2005-06-09 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Support fo the "Restore Default Register Groups" action.
	* ICDebugTarget.java
	* CRegisterManager.java
	* CDebugTarget.java

2005-06-07 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Support fo the "Edit Register Group" action.
	* ICDebugTarget.java
	* IPersistableRegisterGroup.java
	* CRegisterManager.java
	* CDebugTarget.java
	* CRegisterGroup.java

2005-06-07 Mikhail Khodjaiants
	The endianness flag is not chached.
	* CDebugTarget.java

2005-06-06 Mikhail Khodjaiants
	Bug 98594: Unable to set address breakpoints.
	* CBreakpointManager.java
