@@ -10,15 +10,79 @@
  *******************************************************************************/
 package org.eclipse.cdt.debug.internal.core.model;
 
+import org.eclipse.cdt.debug.core.CDebugCorePlugin;
 import org.eclipse.cdt.debug.core.cdi.model.ICDIValue;
 import org.eclipse.cdt.debug.core.cdi.model.type.ICDIArrayValue;
 import org.eclipse.cdt.debug.core.cdi.model.type.ICDIFloatingPointValue;
+import org.eclipse.cdt.debug.core.model.CDebugElementState;
+import org.eclipse.cdt.debug.core.model.ICStackFrame;
+import org.eclipse.cdt.debug.core.model.ICType;
 import org.eclipse.cdt.debug.core.model.ICValue;
+import org.eclipse.debug.core.DebugException;
+import org.eclipse.debug.core.ILaunch;
+import org.eclipse.debug.core.model.IDebugTarget;
+import org.eclipse.debug.core.model.IVariable;
 
 /**
  * The value factory for variable and expressions.
  */
 public class CValueFactory {
+
+	static public final ICValue NULL_VALUE = new ICValue() {
+
+		public String getReferenceTypeName() throws DebugException {
+			return ""; //$NON-NLS-1$
+		}
+
+		public String getValueString() throws DebugException {
+			return ""; //$NON-NLS-1$
+		}
+
+		public boolean isAllocated() throws DebugException {
+			return true;
+		}
+
+		public IVariable[] getVariables() throws DebugException {
+			return new IVariable[0];
+		}
+
+		public boolean hasVariables() throws DebugException {
+			return false;
+		}
+
+		public String getModelIdentifier() {
+			return CDebugCorePlugin.getUniqueIdentifier();
+		}
+
+		public IDebugTarget getDebugTarget() {
+			return null;
+		}
+
+		public ILaunch getLaunch() {
+			return null;
+		}
+
+		public Object getAdapter( Class adapter ) {
+			return null;
+		}
+
+		public ICType getType() throws DebugException {
+			return null;
+		}
+
+		public String evaluateAsExpression( ICStackFrame frame ) {
+			return ""; //$NON-NLS-1$
+		}
+
+		public CDebugElementState getState() {
+			return CDebugElementState.UNDEFINED;
+		}
+
+		public Object getCurrentStateInfo() {
+			return null;
+		}
+		
+	};
 
 	static public CValue createValue( CVariable parent, ICDIValue cdiValue ) {
 		if ( cdiValue instanceof ICDIFloatingPointValue ) {
